# OSBot-Cloud-FS

./: README.md  pyproject.toml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
osbot_cloud_fs/core/file_types/: Cloud_FS__File__Type__Html.py  Cloud_FS__File__Type__Jpeg.py  Cloud_FS__File__Type__Json.py  Cloud_FS__File__Type__Markdown.py  Cloud_FS__File__Type__Png.py
osbot_cloud_fs/core/memory/: Cloud_FS__Memory__File_System.py  Cloud_FS__Memory__Storage.py
osbot_cloud_fs/core/path_handlers/: Path__Handler__Custom.py  Path__Handler__Latest.py  Path__Handler__Temporal.py  Path__Handler__Versioned.py  __init__.py
osbot_cloud_fs/core/schemas/: Cloud_FS__File.py  Cloud_FS__File__Config.py  Cloud_FS__File__Content.py  Cloud_FS__File__Content_Type.py  Cloud_FS__File__Encoding.py  Cloud_FS__File__Info.py  Cloud_FS__File__Metadata.py  Cloud_FS__Path__Handler.py  Enum__Cloud_FS__File__Content_Type.py  Enum__Cloud_FS__File__Encoding.py  Enum__Cloud_FS__Serialization.py  Schema__Cloud_FS__File.py  Schema__Cloud_FS__File__Config.py  Schema__Cloud_FS__File__Content.py  Schema__Cloud_FS__File__Info.py  Schema__Cloud_FS__File__Metadata.py  Schema__Cloud_FS__File__Type.py  Schema__Cloud_FS__Path__Handler.py
osbot_cloud_fs/core/schemas/_to_do/: Cloud_FS__Storage__Key.py
osbot_cloud_fs/utils/: Version.py
tests/unit/core/file_types/: test_Cloud_FS__File__Type__Json.py
tests/unit/core/memory/: test_Cloud_FS__Memory__File_System.py  test_Cloud_FS__Memory__Storage.py
tests/unit/core/schemas/: test_Cloud_FS__File__Content.py  (+3 more)
tests/unit/utils/: test_Version.py
